VOD 분석 발행과 최종화 실행 분리